--- a/app/views/layouts/_user_sidebar.html.erb
+++ b/app/views/layouts/_user_sidebar.html.erb
@@ -9,8 +9,9 @@
 
 </div>
 
-<ul class="nav nav-pills" >
+<ul class="nav nav-pills nav-stacked" >
   <li class= <%= "active" if params[:controller] == "photos" %>><%= link_to t("photos_"),user_photos_path(@user) %></li>
   <li class= <%= "active" if params[:controller] == "user_cloud" %>><%= link_to t("cloud"),user_cloud_path(@user) %></li>
+
   <%= render(:partial => "layouts/current_user_links", locals: {user: @user}) if @user == current_user %>
 </ul>
