--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
       <div class="content row" >
           <%= render 'layouts/header' %>
             
-        <section class="main col col-lg-12">
+        <section class="main col col-lg-12" style = "margin-bottom: 20px">
           <%= render 'banners/top' %>      
           <%= breadcrumbs :separator => " &rsaquo; " %>
           <%= render 'layouts/messages' %>
