Shows age on all photos including competitions

--- a/app/views/competition_photos/index.html.erb
+++ b/app/views/competition_photos/index.html.erb
@@ -13,7 +13,7 @@
     <div class="col-lg-3 col-md-4 col-xs-6 thumb">
       <%= render partial: "photos/thumb", locals: { photo: competition_photo, path: gallery_show_path(competition_photo.photo) } %>
       <%- l1 = link_to del_icon, competition_competition_photo_path(@competition,competition_photo), method: :delete, data: { confirm: 'Are you sure?' } unless @competition.overdue? %>
-      <%= render partial: "photos/caption", locals: { photo: competition_photo, links: [l1] } %>
+      <%= render partial: "photos/caption", locals: { photo: competition_photo.photo, links: [l1] } %>
     </div>
 
   
