--- a/app/views/competitions/view_photos.html.erb
+++ b/app/views/competitions/view_photos.html.erb
@@ -9,26 +9,27 @@
 
     <% @competition_photos.each_with_index do |competition_photo,index| %>
   
-    <div class="col-sm-3" style="height: 290px;">
-    <div class="thumbnail">  
+    <div class="col-sm-3 thumb">
     
-    <%= link_to image_tag(competition_photo.image_url(:thumb)), photo_view_path(competition_photo.photo), class: "thumbnail" %>
+    
             
-    <div class="caption">
-     <small><%= "#{competition_photo.jury_count} / #{@all_jury_count}" %></small>
-     <span style = "float: right">
-     
-    <%= content_tag(:span,competition_photo.like_count,class: "label label-primary",id: "like_count#{competition_photo.id}") %>
+   <%= render partial: "photos/thumb", locals: { photo: competition_photo.photo, path: gallery_show_path(competition_photo.photo) } %>
+    
+
+  
+     <%- l0 = "#{competition_photo.jury_count} / #{@all_jury_count}" %>
+     <%- l1 = content_tag(:span,competition_photo.like_count,class: "label label-primary",id: "like_count#{competition_photo.id}") %>
     
     <% if can?(:read, Competition)  %>
     <%- icon = competition_photo.liked_by(@user) ? unlike_icon("like#{competition_photo.id}") : like_icon("like#{competition_photo.id}") %>
-    <%= link_to(icon, like_path(competition_photo), remote: true) if @can_like%>
+    <%- l2 = link_to(icon, like_path(competition_photo), remote: true) if @can_like%>
     <% end %>
 
-    </span>
+    <%= render partial: "photos/caption", locals: { photo: competition_photo.photo, links: [l0,l1,l2] } %>
     
-    </div>  
-    </div>
+    
+    
+    
     
     
   </div>
