--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -69,9 +69,9 @@
       <% @last_photos.each do |photo|  %>
        <div class="col-sm-3">
      
-         <a href=<%= gallery_show_path(photo) %> class="thumbnail" >
-          <%= image_tag photo.image_url(:thumb), style: "height: 100px;" %>
-         </a>
+         
+         <%= render partial: "photos/thumb", locals: { photo: photo, path: gallery_show_path(photo) } %>
+         <%= render partial: "photos/caption", locals: { photo: photo, links: [] } %>
      
        </div>
       <% end %>      
