SitePhotos now have age_policy, and also can be edited by admin

--- a/app/views/admin/site_photos/_form.html.erb
+++ b/app/views/admin/site_photos/_form.html.erb
@@ -17,6 +17,10 @@
     <%= f.association :album,:input_html => {class: "form-control"} %>
     </div>
     
+    <div class="form-group">
+    <%= f.association :policy,:input_html => {class: "form-control"} %>
+    </div>
+
   
     <%= f.button :submit,class: "btn btn-default" %>
   
