--- a/app/views/admin/site_photos/choose.html.erb
+++ b/app/views/admin/site_photos/choose.html.erb
@@ -13,6 +13,10 @@
     <%= f.association :album,:input_html => {class: "form-control"} %>
     </div>
     
+   <div class="form-group">
+    <%= f.association :policy,:input_html => {class: "form-control"} %>
+    </div>
+
   
     <%= f.button :submit,class: "btn btn-default" %>
   
