--- a/app/views/admin/site_photos/edit.html.erb
+++ b/app/views/admin/site_photos/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing topic</h1>
+<h1><%= t(".title") %></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @topic %> |
-<%= link_to 'Back', topics_path %>
+<%= link_to 'Show', @site_photo %> |
+<%= link_to 'Back', admin_site_photos_path %>
