--- a/app/views/banners/_top.html.erb
+++ b/app/views/banners/_top.html.erb
@@ -1,6 +1,6 @@
 <div id="top_banners" style="padding-bottom: 10px" >
   
- <%= link_to image_tag(BannerGenerator.new.top.image_url), "/competitions",:target => "_blank" %>
+ <%= link_to image_tag(BannerGenerator.new.top), "/competitions",:target => "_blank" %>
 
 </div>
 
