--- a/app/views/banners/_bottom.html.erb
+++ b/app/views/banners/_bottom.html.erb
@@ -1,6 +1,7 @@
 <div id="top_banners" style="padding-bottom: 10px" >
-  
- <%= link_to image_tag(BannerGenerator.new.bottom.image_url), "/competitions",:target => "_blank" %>
+ 
+ <%- banner =  BannerGenerator.new.bottom %> 
+ <%= link_to image_tag(banner.image_url), banner.link ,:target => "_blank" if banner%>
 
 </div>
 
