Move top banner to column

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,8 +23,10 @@
 
       <section class="container" style = "background: #ffffff">
       <div class="content row" >
+      <section class="main col col-lg-12" style = "margin-bottom: 20px">
           <%= render 'layouts/header' %>
           <%= render 'banners/top' %>       
+          </section>
         <section class="main col col-lg-12" style = "margin-bottom: 20px">
            
           <%= breadcrumbs :separator => " &rsaquo; " %>
