--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
   
   <footer class="row">
     <nav class="col col-lg-12">
-      <%= render 'banners/top' %>  
+      <%= render 'banners/bottom' %>  
       <ul class="breadcrumb">
         <li><a href="about.php">About the Roux Academy</a></li>
         <li><a href="privacypolicy.php">Privacy Policy</a></li>
