Move top banners to row for user_layout

--- a/app/views/layouts/user_profile_layout.html.erb
+++ b/app/views/layouts/user_profile_layout.html.erb
@@ -24,8 +24,11 @@
       <section class="container" style = "background: #ffffff">
       
       <div class="content row" >
+        
+        <section class="main col col-lg-12" style = "margin-bottom: 20px">
           <%= render 'layouts/header' %>
-          <%= render 'banners/top' %>      
+          <%= render 'banners/top' %>       
+        </section>   
          
          <div class="col-md-2" style="border: dotted 1px silver"><%= render 'layouts/user_sidebar' %></div>    
          
