Align bottom banner

--- a/app/views/layouts/user_profile_layout.html.erb
+++ b/app/views/layouts/user_profile_layout.html.erb
@@ -45,8 +45,12 @@
 
   
   <footer class="row">
+  <section class="col col-lg-12">
+    <%= render 'banners/bottom' %>  
+  </section>
+
     <nav class="col col-lg-12">
-      <%= render 'banners/top' %>  
+      
       <ul class="breadcrumb">
         <li><a href="about.php">About the Roux Academy</a></li>
         <li><a href="privacypolicy.php">Privacy Policy</a></li>
