Distinct menu for writers

--- a/app/views/admin/articles/_form.html.erb
+++ b/app/views/admin/articles/_form.html.erb
@@ -12,6 +12,6 @@
     <%= f.input :digest,  :input_html => { :class => "redactor form-control"} %>
     </div>
 
-    <%= f.button :submit,input_html: {class: "btn btn-default"} %>
+    <%= f.button :submit,input_html: {class: "btn btn-primary"} %>
   
 <% end %>
