--- a/app/views/admin/articles/index.html.erb
+++ b/app/views/admin/articles/index.html.erb
@@ -15,8 +15,8 @@
       <tr>
         <td><%= admin_article.title %></td>
         <td><%= link_to show_icon, admin_article %></td>
-        <td><%= link_to edit_icon, edit_admin_article_path(admin_article) %></td>
-        <td><%= link_to del_icon, [:admin, admin_article], method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to edit_icon, edit_admin_article_path(admin_article) if can? :edit, admin_article %> </td>
+        <td><%= link_to del_icon, [:admin, admin_article], method: :delete, data: { confirm: 'Are you sure?' } if can? :manage, admin_article %></td>
       </tr>
     <% end %>
   </tbody>
@@ -24,4 +24,4 @@
 
 <br>
 
-<%= link_to t(".new"), new_admin_article_path, {class: "btn btn-primary"}   %>
+<%= link_to t(".new"), new_admin_article_path, {class: "btn btn-primary"}  if can? :manage, Article %>
