--- a/app/views/layouts/_admin_menu.html.erb
+++ b/app/views/layouts/_admin_menu.html.erb
@@ -2,16 +2,18 @@
   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Управление<b class="caret"></b></a>
  
   <ul class="dropdown-menu">
+    <li class="dropdown-header">Редакция</li>
+    <%= render 'layouts/writer_menu' if current_user && current_user.is_writer? %>
     <li class="dropdown-header">Модерация</li>
     <%= render 'layouts/moder_menu' if current_user && current_user.is_stuff? %>
     
     <li class="dropdown-header">Администрирование</li>
-    <li><%= link_to 'Пользователи', users_path if current_user && current_user.admin? %></li>
-    <li><%= link_to 'Темы', admin_topics_path %></li>
-    <li><%= link_to "Конкурсы",admin_competitions_path %></li>
-    <li><%= link_to "Возрастная классификация",admin_age_policies_path %></li>
-    <li><%= link_to "Баннеры",admin_banners_path %></li>
-    <li><%= link_to "Реклама",admin_banner_placements_path %></li>
+    <li><%= link_to 'Пользователи', users_path if can? :manage, User %></li>
+    <li><%= link_to 'Темы', admin_topics_path if can? :manage, Topic%></li>
+    <li><%= link_to "Конкурсы",admin_competitions_path if can? :manage, Competition%></li>
+    <li><%= link_to "Возрастная классификация",admin_age_policies_path if can? :manage, Admin::AgePolicy%></li>
+    <li><%= link_to "Баннеры",admin_banners_path if can? :manage, Admin::Banner %></li>
+    <li><%= link_to "Реклама",admin_banner_placements_path if can? :manage, Admin::BannerPlacement %></li>
     
   </ul>
 
