--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for([:admin, @admin_article]) do |f| %>
+<%= simple_form_for([:admin, @admin_post]) do |f| %>
   <%= f.error_notification %>
 
 
