Stuff (admin, moder) do not see banners

--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -1,4 +1,4 @@
-<h1><%= t(".articles_") %></h1>
+<h1><%= t("#{@post_sym.to_s.pluralize}_") %></h1>
 
 <table class="table table-striped">
   <thead>
