--- a/app/views/banners/_bottom.html.erb
+++ b/app/views/banners/_bottom.html.erb
@@ -1,7 +1,8 @@
+<%- unless current_user && current_user.is_stuff? %>
 <div id="top_banners" style="padding-bottom: 10px" >
  
  <%- banner =  BannerGenerator.new.bottom %> 
  <%= link_to image_tag(banner.image_url), banner.link ,:target => "_blank" if banner%>
 
 </div>
-
+<%- end  %>
