--- a/app/views/home/test.html.erb
+++ b/app/views/home/test.html.erb
@@ -1,1 +1,10 @@
-<h1>Hello</h1>
+
+
+ <div class="fotorama" data-autoplay="true" style="position:relative;margin-right:20%;margin-left:20%;" data-fit="cover" data-width="100%"
+     data-ratio="1200/900">
+     
+
+     
+    <%= image_tag  Photo.last.image_url(:normal) %>      
+     
+  </div>
