--- a/app/views/layouts/_lang_select.html.erb
+++ b/app/views/layouts/_lang_select.html.erb
@@ -1,5 +1,6 @@
+
 <% if I18n.locale == I18n.default_locale %>
-<li>
+<li class="pull-right">
   <%= link_to en_icon, :locale=>'en'%>
 </li>
 <% else %>
