--- a/app/views/layouts/_moder_menu.html
+++ b/app/views/layouts/_moder_menu.html
@@ -1,4 +1,4 @@
-<li><%=link_to "Переписка",admin_messages_path if can? :manage,Message %></li>
+<li><%=link_to "Тикеты",admin_messages_path if can? :manage,Message %></li>
 <li><%=link_to "Фотографии",admin_photos_path if can? :manage,Photo %>  </li>
 
 <li><%=link_to "Альбомы", admin_albums_path if can? :manage, Admin::Album %>  </li>
