Add author info and date to articles on show and main page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -66,16 +66,13 @@ position:relative;right:50%;float:left;margin:0;list-style:none
 
 .back {
  
- background: rgb(59,61,69); /* Old browsers */
-background: -moz-linear-gradient(top,  rgba(59,61,69,1) 0%, rgba(59,61,69,1) 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(59,61,69,1)), color-stop(100%,rgba(59,61,69,1))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  rgba(59,61,69,1) 0%,rgba(59,61,69,1) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  rgba(59,61,69,1) 0%,rgba(59,61,69,1) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  rgba(59,61,69,1) 0%,rgba(59,61,69,1) 100%); /* IE10+ */
-background: linear-gradient(to bottom,  rgba(59,61,69,1) 0%,rgba(59,61,69,1) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3b3d45', endColorstr='#3b3d45',GradientType=0 ); /* IE6-9 */
-
-
+background:
+radial-gradient(black 15%, transparent 16%) 0 0,
+radial-gradient(black 15%, transparent 16%) 8px 8px,
+radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
+radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
+background-color:#282828;
+background-size:16px 16px;
 }
 
 
