--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,7 @@
 
-
 <% if @setting_decorator.photos  %>
   <div class="fotorama" data-autoplay="true" data-fit="cover" data-width="100%"
-     data-ratio="1200/900">
+     data-ratio="1200/900" data-hash="true">
      <% @setting_decorator.photos.each do |photo| %>
 
      <img style="float: left "src="<%= photo.image_url(:carousel) %>" /> 
@@ -18,9 +17,7 @@
   <% if @setting_decorator.novelty  %>
   <div class="jumbotron" style="padding:0px">
   <h3> Главная новость</h3>
-  
     <div style="border: 1px dotted silver; padding: 10px">
-
       <img src = "<%= @setting_decorator.novelty.first_image_src %>" height="30%" width="30%" style="float: left; padding-right: 20px;" />
       <h2> <%=  @setting_decorator.novelty.title %> </h2>
       <p><%= raw @setting_decorator.novelty.digest %> <%= link_to t("more"), novelty_path(@setting_decorator.novelty) %> </p>
@@ -34,16 +31,18 @@
 <div style="clear:both;"></div>
   <h3> Рекомендуемая статья</h3>
   <% if @setting_decorator.first_article %>
-    
-           
       <div style="border: 1px dotted silver; padding: 10px;">
         <img src = "<%= @setting_decorator.first_article.first_image_src %>" height="30%" width="30%" style="float: left; padding-right: 20px;" />
-        <h4><%= @setting_decorator.first_article.title %></h4>
-        <p><%= raw @setting_decorator.first_article.digest %> <%= link_to t("more"), article_path(@setting_decorator.first_article) %></p>
+        
+        <h4><%= link_to @setting_decorator.first_article.title, article_path(@setting_decorator.first_article) %></h4>
+        
+        <small class="text-muted"><%= @setting_decorator.first_article.author %> </small>
+        <small class="text-muted"><%= ld @setting_decorator.first_article.created_at %> </small>
+        <p><%= raw @setting_decorator.first_article.digest %> 
       
      
     <div style="clear:both;padding-top: 20px"></div>
-      <p class="muted">Еще статьи...</p>
+      <div class="muted">Еще статьи...</div>
       <div class="row">
        
       <% @setting_decorator.other_articles.each_with_index  do |article,index| %>
@@ -53,7 +52,7 @@
             <img src = "<%= article.first_image_src %>" style="height: 100px" />
           </a>
           <div class="caption">
-            <%= article.title %>
+            <%= link_to article.title, article_path(article) %>
           </div>  
         </div>  
       
