--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -11,6 +11,10 @@
     <div class="form-group">
     <%= f.input :digest,  :input_html => { :class => "redactor form-control"} %>
     </div>
+    <div class="form-group">
+    <%= f.association :age_policy, :input_html => {class: "form-control"}%>
+    </div>
+
 
     <%= f.hidden_field :type %>
 
