--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -12,8 +12,16 @@
 
   <tbody>
     <% @admin_posts.each do |admin_post| %>
+    
       <tr>
-        <td><%= admin_post.title %></td>
+        <td><%= admin_post.title.to_s + " "+admin_post.class.to_s %></td>
+        
+
+        <td>
+        <%= 
+          link_to promote_icon("p#{admin_post.id}", admin_post.promoted?), [:promote,:admin,admin_post], remote: true, method: :post %>
+        </td>
+
         <td><%= link_to show_icon, admin_post %></td>
         <td><%= link_to edit_icon, [:edit,:admin,admin_post] if can? :edit, admin_post %> </td>
         <td><%= link_to del_icon, [:admin, admin_post], method: :delete, data: { confirm: 'Are you sure?' } if can? :manage, admin_post %></td>
