--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -19,9 +19,9 @@
   <h3> Главная новость</h3>
     <div style="border: 1px dotted silver; padding: 10px">
       <img src = "<%= @setting_decorator.novelty.first_image_src %>" height="30%" width="30%" style="float: left; padding-right: 20px;" />
-      <h2> <%=  @setting_decorator.novelty.title %> </h2>
-      <p> <%= raw @setting_decorator.novelty.digest %> <%= link_to t("more"), novelty_path(@setting_decorator.novelty) %> </p>
-      <small> <%= badge "#{@setting_decorator.novelty<%= render 'post' %>.age_policy_age}+"%> </small>
+      <h2> <%= link_to  @setting_decorator.novelty.title, novelty_path(@setting_decorator.novelty) %> </h2>
+      <p> <%= raw @setting_decorator.novelty.digest %>  </p>
+      <small> <%= badge "#{@setting_decorator.novelty.age_policy_age}+"%> </small>
     </div>
   </div>
   <% end %>
@@ -32,7 +32,7 @@
 <div style="clear:both;"></div>
   <h3> Рекомендуемая статья</h3>
   <% if @setting_decorator.first_article %>
-      <div style="border: 1px dotted silver; padding: 10px;">
+      <div classs="well" style="padding: 10px;">
         <img src = "<%= @setting_decorator.first_article.first_image_src %>" height="30%" width="30%" style="float: left; padding-right: 20px;" />
         
         <h4><%= link_to @setting_decorator.first_article.title, article_path(@setting_decorator.first_article) %></h4>
@@ -51,9 +51,9 @@
       
         
         <div class="col-xs-6 col-md-3">
-          <a href="#" class="thumbnail">
+          <div class="thumbnail">
             <img src ="<%= article.first_image_src %>"  alt="..." style = "max-height: 150px" >
-          </a>
+          </div>
           <div class="caption">
             <%= link_to article.title, article_path(article) %>
           </div>  
