--- a/app/views/articles/list.html.erb
+++ b/app/views/articles/list.html.erb
@@ -10,7 +10,7 @@
     <% @articles.each do |article| %>
 
     
-     <li><h4><span class="badge"><%="#{article.age_policy_age}+ "%></span> <%= link_to article.title , article_path(article) %></h4> 
+     <li><h4><%= age_badge(article.age_policy_age) %> <%= link_to article.title , article_path(article) %></h4> 
       
       
       
