--- a/app/views/admin/competition_requests/index.html.erb
+++ b/app/views/admin/competition_requests/index.html.erb
@@ -15,7 +15,8 @@
       <tr>
         <td><%= request.user_name %></td>
         <td> <%= request.decision %></td>
-        <td><%= link_to "Resp", new_admin_request_response_path(request) %></td>
+        <td> <%= link_to(t("competition_requests.index.requests"), edit_admin_request_path(request),  class: "btn btn-primary")  %></td>
+        
 
        </tr>
     <% end %>
