--- a/app/views/competitions/index.html.erb
+++ b/app/views/competitions/index.html.erb
@@ -8,6 +8,7 @@
   <thead>
     <tr>
       <th><%= t(".title") %></th>
+      <th><%= t(".type") %></th>
       <th><%= t(".last_date") %></th>
       <th><%= t(".open_date") %></th>
       <th></th>
@@ -21,6 +22,7 @@
     <% @competitions.each do |competition| %>
       <tr>
         <td><%= link_to competition.title,view_photos_competition_path(competition) %></td>
+        <td><%= competition.open? ? green_label(t("open")) : red_label(t("private")) %></td>
         <td><%= ld competition.last_date %></td>
         <td><%= ld competition.open_date %></td>
         <td><%= link_to(photo_icon,  view_photos_competition_path(competition),:title => "Фотографии") %></td>
