Removed application.yml from git control

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
      data-ratio="1200/900" data-transition="crossfade">
      <% @setting_decorator.photos.each do |photo| %>
 
-     <img style="float: left "src="<%= photo.image_url(:carousel) %>" /> 
+     <img style="float: left "src="<%= photo.image_url(:normal) %>" /> 
       
      <% end %> 
   </div>
