--- a/app/views/competitions/choose_photo.js.erb
+++ b/app/views/competitions/choose_photo.js.erb
@@ -1,9 +1,8 @@
-$("#dialog1").html('<%= j render("choose_form",photos: @photos) %>');
+$(".modal-body").replaceWith('<%= j render("choose_form",photos: @photos) %>');
  
-
-  
+ 
 //  $('#dialog').dialog({width: 750,height: 650,position: "center",modal: false,
 // buttons: [ { text: "Ok", click: function() { $( this ).dialog( "close" ); } } ]});
   
-  $('#dialog').modal('show');
+$('#dialog').modal('show');
   
