--- a/app/views/photos/view.html.erb
+++ b/app/views/photos/view.html.erb
@@ -3,9 +3,9 @@
   <%= @photo.title %>
 </p>
 
-<p>
+<p class="text-center">
   
-  <%= image_tag @photo.image_url(:normal),class: "center" %>
+  <%= image_tag @photo.image_url(:normal)%>
 </p>
 
 <hr/>
