--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -6,7 +6,10 @@
   <%= f.error_notification %>
   <%= display_base_errors resource %>
   
-  
+  <div class="form-group">
+  <%= f.input :login, :input_html => {class: "form-control", :autocomplete => "off"}  %>
+  </div>
+
   <div class="form-group">
   <%= f.input :name, :input_html => {class: "form-control", :autocomplete => "off"}  %>
   </div>
@@ -44,7 +47,7 @@
   </div>
  
   <div class="form-group">
-  <%= f.input :password, :autocomplete => "off", :hint => "leave it blank if you don't want to change it", :required => false, :input_html => {class: "form-control"} %>
+  <%= f.input :password, :autocomplete => "off", :hint => I18n.t('leave_it_blank'), :required => false, :input_html => {class: "form-control"} %>
   </div>
   
   <div class="form-group">
@@ -56,11 +59,11 @@
   </div>
   
    <div class="form-group">
-  <%= f.input :current_password, :hint => "we need your current password to confirm your changes", :required => true, :input_html => {class: "form-control"}  %>
+  <%= f.input :current_password, :hint => I18n.t('we_need_your_current_password'), :required => true, :input_html => {class: "form-control"}  %>
   </div>
 
   <%= f.button :submit, 'Update', :class => 'btn-primary' %>
 <% end %>
 <h3>Cancel my account</h3>
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %>.</p>
+<p>Unhappy? <%= link_to I18n.t('cancel_account'), registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %>.</p>
 <%= link_to "Back", :back %>
