--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,9 +44,8 @@
     <nav class="col col-lg-12">
       <%= render 'banners/bottom' %>  
       <ul class="breadcrumb">
-        <li><a href="">About the Roux Academy</a></li>
-        <li><a href="">Privacy Policy</a></li>
-        <li><a href="">Roux Academy Website</a></li>
+        <li><a href="">All rights reserved</a></li>
+        
       </ul><!-- breadcrumb -->
     </nav><!-- nav -->
   </footer><!-- footer -->
