--- a/app/views/admin/site_photos/choose.html.erb
+++ b/app/views/admin/site_photos/choose.html.erb
@@ -2,6 +2,8 @@
   <%= f.error_notification %>
 
     <!-- Загрузка только фотографий пользователей -->
+    
+    <%= image_tag(@photo.image_url(:thumb)) %>
 
     <div class="form-group">
     <%= f.input :title, :input_html => {value: @photo.title, class: "form-control"} %>
@@ -10,15 +12,15 @@
     <%= f.hidden_field :photo_id, :value => @photo_id %>
     
     <div class="form-group">
-    <%= f.association :album,:input_html => {class: "form-control"} %>
+    <%= f.association :album,:input_html => {class: "form-control"}, default: 1 %>
     </div>
     
    <div class="form-group">
-    <%= f.association :policy,:input_html => {class: "form-control"} %>
-    </div>
+    <%= f.association :policy,:input_html => {class: "form-control"}, default: 1 %>
+   </div>
 
   
-    <%= f.button :submit,class: "btn btn-default" %>
+    <%= f.button :submit, value: t(:save), class: "btn btn-default" %>
   
 <% end %>
 
